# portfolio

./: .gitattributes  .gitignore  LICENSE  README.md
.github/workflows/: ci-causal-uplift.yml  ci-config-driven-ml.yml  ci-demand-forecasting.yml  ci-end2end-churn.yml  ci-rag-pipeline.yml  ci-recsys-two-stage.yml
causal_uplift/: DATA_NOTES.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.ps1  setup.sh
causal_uplift/data/raw/: README.md
causal_uplift/scripts/: check_readme.py
causal_uplift/src/upliftlab/: __init__.py  main.py
causal_uplift/src/upliftlab/data/: __init__.py  load.py  synthetic.py
causal_uplift/src/upliftlab/experiment/: __init__.py  adjustment.py  ate.py  balance.py
causal_uplift/src/upliftlab/uplift/: __init__.py  evaluation.py  learners.py
causal_uplift/tests/: test_adjustment.py  test_ate.py  test_balance.py  test_data.py  test_uplift.py
config_driven_ml/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.ps1  setup.sh
config_driven_ml/src/mlctl/: config_layer.py  config_models.py  evaluate.py  main.py  pipeline.py  train.py
config_driven_ml/src/mlctl/configs/: evaluate.yaml  gbm_tuned.yaml  ridge_strong.yaml  train.yaml
config_driven_ml/tests/: test_config_models.py  test_hydra_integration.py  test_pipeline.py
demand_forecasting/: DATA_NOTES.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.ps1  setup.sh
demand_forecasting/data/raw/: README.md
demand_forecasting/scripts/: check_readme.py
demand_forecasting/src/demandcast/: __init__.py  main.py
demand_forecasting/src/demandcast/analysis/: plots.py  promo_lift.py
demand_forecasting/src/demandcast/data/: __init__.py  calendar.py  load.py
demand_forecasting/src/demandcast/evaluation/: __init__.py  backtest.py  metrics.py
demand_forecasting/src/demandcast/models/: __init__.py  baselines.py  lgbm.py  sarimax.py
demand_forecasting/tests/: test_backtest.py  test_cli.py  test_lgbm.py  test_metrics.py  test_promo_lift.py  test_sarimax.py
end2end_churn/: .coveragerc  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  demo_schema_alignment.py  docker-compose.yml  pyproject.toml  pytest.ini  run_ci_checks_locally.sh  serve.py  test_schema_alignment.py  train.py
end2end_churn/config/: prod.yaml  train_config.yaml  train_config_quick.yaml
end2end_churn/docs/: OPERATIONS.md  SLO.md
end2end_churn/grafana/provisioning/dashboards/: churn_overview.json
end2end_churn/k8s/: README.md  deployment.yaml  ingress.yaml  secret.yaml
end2end_churn/scripts/: compare_models.py  manage_registry.py  security_scan.sh  test_drift.py
end2end_churn/src/: __init__.py  config.py
end2end_churn/src/api/: __init__.py  app.py  auth.py  dependencies.py  errors.py  middleware.py  retraining.py  schemas.py  service.py  settings.py  types.py  validation.py
end2end_churn/src/api/routes/: __init__.py  drift.py  health.py  info.py  predict.py  retrain.py
end2end_churn/src/data/: __init__.py  loader.py  preprocessing.py
end2end_churn/src/evaluation/: __init__.py  metrics.py  threshold.py  visualizations.py
end2end_churn/src/models/: __init__.py  model_factory.py  pipeline.py
end2end_churn/src/training/: __init__.py  artifacts.py  mlflow_logging.py  pipeline.py  reporting.py  trainer.py  tuning.py
end2end_churn/src/utils/: __init__.py  drift.py  io.py  logger.py  prometheus_metrics.py
end2end_churn/tests/: __init__.py  conftest.py  locustfile.py  test_api.py  test_auth.py  test_config.py  test_drift.py  test_drift_detection.py  test_e2e.py  test_io_checksum.py  test_lifespan.py  test_model.py  test_preprocessing.py  test_registry.py  test_request_size.py  test_retrain.py  test_threshold.py  test_validation.py
rag_pipeline/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  DESIGN.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  main.py  requirements-dev.txt  requirements.txt  setup.ps1  setup.sh
rag_pipeline/config/: config.yaml
rag_pipeline/scripts/: ablation_eval.py  benchmark_overfetch.py  clean.sh  prune_sklearn_corpus.py
rag_pipeline/tests/: test_chunking.py  (+7 more)
recsys_two_stage/: .gitignore  DATA_NOTES.md  Dockerfile  Makefile  PLAN_STAGE1.md  PLAN_STAGE2.md  PLAN_STAGE3.md  README.md  docker-compose.yml  pyproject.toml  setup.ps1  setup.sh
recsys_two_stage/data/: prepare_item_properties.py
recsys_two_stage/data/raw/: README.md
recsys_two_stage/outputs/: ablations.csv  als_count_ablation.csv  als_count_ablation_paired.csv  cohort_flow.csv  metrics_beyond.csv  metrics_cold.csv  metrics_e2e.csv  metrics_full.csv  metrics_neural.csv  metrics_operational.csv  metrics_sampled.csv  paired_ci_e2e.csv  paired_ci_full.csv  protocol_comparison.csv  protocol_disagreement.csv  retrieval_blend.csv  retrieval_ceiling.csv  seed_sensitivity_deltas.csv  seed_sensitivity_summary.csv
recsys_two_stage/scripts/: check_readme.py
recsys_two_stage/src/reclab/: __init__.py  main.py  scaling.py  sensitivity.py  stage2.py  stage3.py
recsys_two_stage/src/reclab/data/: __init__.py  filtering.py  load.py
recsys_two_stage/src/reclab/evaluation/: __init__.py  beyond_accuracy.py  cold_start.py  full_catalogue.py  metrics.py  retrieval_ceiling.py  sampled.py
recsys_two_stage/src/reclab/features/: __init__.py  item_features.py
recsys_two_stage/src/reclab/models/: __init__.py  als.py  base.py  ease.py  itemknn.py  popularity.py  sasrec.py  two_tower.py
recsys_two_stage/src/reclab/ranking/: __init__.py  dataset.py  ranker.py
recsys_two_stage/src/reclab/serving/: __init__.py  ann.py  app.py  pipeline.py
recsys_two_stage/src/reclab/splitting/: __init__.py  protocols.py
recsys_two_stage/src/reclab/tuning/: __init__.py  grid.py
recsys_two_stage/tests/: __init__.py  neural_fixtures.py  test_ann.py  test_api.py  test_cold_start.py  test_correctness_fixes.py  test_data.py  test_evaluation.py  test_metrics.py  test_models.py  test_neural_sanity.py  test_ranker.py  test_ranker_data.py  test_sampled_bias.py  test_sasrec.py  test_splitting.py  test_two_tower.py
(+24 files in other folders)
