[project]
name = "causal-uplift"
version = "0.1.0"
description = "Experimentation and uplift modelling on a randomized e-mail marketing trial: ATE with honest inference, CUPED variance reduction, and meta-learner uplift for targeting"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "lightgbm>=4.3",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
upliftlab = "upliftlab.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/upliftlab"]
