[project]
name = "config-driven-ml"
version = "0.1.0"
description = "Config-driven ML training pipeline demonstrating a Hydra + Pydantic configuration layer"
requires-python = ">=3.10"
dependencies = [
    "hydra-core>=1.3",
    "pydantic>=2.7",
    "scikit-learn>=1.4",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
mlctl = "mlctl.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlctl"]
