[project]
name = "recsys-two-stage"
version = "0.1.0"
description = "Two-stage recommender systems on RetailRocket: honest evaluation protocols, tuned classical baselines, neural retrieval, and the scalability trade-offs a benchmark does not show"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "implicit>=0.7",
    # Stage 2 neural models. CPU-only build is pulled from the PyTorch CPU wheel
    # index at install time (see Dockerfile / requirements.lock header) so the
    # image does not balloon with CUDA libraries.
    "torch>=2.2",
    "matplotlib>=3.8",
    # Stage 3: LightGBM reranker, HNSW approximate nearest neighbours, FastAPI serving.
    "lightgbm>=4.3",
    "hnswlib>=0.8",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",  # FastAPI TestClient
]

[project.scripts]
reclab = "reclab.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reclab"]
